# tablepro-linuxclone

./: .clang-format  .clang-tidy  .env.example  .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  DEV_ENVIRONMENT_SETUP.md  Makefile  README.md  VCPKG_SETUP.md  app.go  coverage.out  docker-compose.yml  go.mod  go.sum  main.go  main.py  playwright.config.ts  pyproject.toml  vcpkg.json  wails.json
.agent/skills/: superpowers
.github/workflows/: ci.yml  frontend-tests.yml  go-tests.yml
cmake/: README.md
design-system/tablepro-linux-clone/: MASTER.md
design-system/tablepro-phase-7/: MASTER.md
docs/plans/: 2026-03-16-phase-01-setup.md  2026-03-16-phase-02-backend-core.md  2026-03-16-phase-03-postgresql-driver.md  2026-03-16-phase-04-ui-foundation.md  2026-03-16-phase-05-data-grid.md  2026-03-16-phase-06-sql-editor.md  2026-03-16-phase-07-export-import.md  2026-03-16-phase-08-history-settings.md  2026-03-16-phase-09-additional-drivers.md  2026-03-16-phase-10-ssh-ssl-security.md  2026-03-16-phase-11-licensing-polish.md  2026-03-16-phase-12-release-docs.md  2026-03-16-phase-optimization-design.md  2026-03-17-tauri-design.md  2026-03-17-tauri-implementation-plan.md
docs/pool-test/: pool.go
docs/superpowers/plans/: 2026-03-14-connection-pooling.md
frontend/: .eslintrc.cjs  index.html  package-lock.json  package.json  package.json.md5  tsconfig.json  vitest.config.js
frontend/src/: App.tsx  style.css  types.ts
frontend/src/components/: ChangePanel.tsx  ConnectionForm.tsx  ConnectionList.tsx  ConnectionStatusIndicator.tsx  DataGrid.tsx  DatabaseIcon.tsx  HistoryEntry.tsx  HistoryPanel.test.tsx  HistoryPanel.tsx  PaginationBar.tsx  QueryEditor.integration.test.tsx  QueryEditor.test.tsx  QueryEditor.tsx  SessionStatusToast.tsx  TabBar.tsx
frontend/src/hooks/: useQueryEvents.test.ts  useQueryEvents.ts  useSessionEvents.test.ts  useSessionEvents.ts
frontend/src/lib/: connectionManager.ts  connectionSchema.ts
frontend/src/stores/: changeStore.ts  connectionStore.ts  queryStore.test.ts  queryStore.ts  sessionStore.ts  tabStore.ts
frontend/src/test/: setup.ts
frontend/src/types/: change.ts  session.ts
frontend/src/wailsjs/: runtime.ts
frontend/wailsjs/go/: models.ts
include/core/: change_tracker.h  connection_config.h  connection_manager.h  core.h  database_driver.h  database_exceptions.h  database_types.h  query_executor.h  query_result.h  sql_generator.h
include/drivers/: drivers.h  postgres_driver.h
include/services/: services.h
include/ui/: connection_dialog.h  data_grid_widget.h  mainwindow.h  result_set_model.h  schema_tree_view.h  theme_manager.h  ui.h
internal/change/: commit.go  commit_test.go  dialect.go  dialect_test.go  generator.go  generator_comprehensive_test.go  generator_test.go  integration_test.go  manager.go  manager_comprehensive_test.go  manager_test.go  types.go
internal/config/: config.go
internal/connection/: config_path.go  keychain.go  manager.go  models.go  ssl.go  test.go  url_parser.go  url_parser_test.go
internal/deeplink/: handler.go
internal/driver/: README.md  driver.go  driver_test.go  factory.go  types.go
internal/driver/clickhouse/: clickhouse.go  clickhouse_test.go  schema.go  types.go
internal/driver/duckdb/: duckdb.go  duckdb_test.go
internal/driver/mongodb/: mongodb.go  mongodb_test.go  schema.go  types.go
internal/driver/mssql/: mssql.go  mssql_test.go  schema.go  types.go
internal/driver/mysql/: mysql.go  schema.go  types.go
internal/driver/postgres/: postgres.go  postgres_integration_test.go  postgres_test.go  schema.go  (+1 more)
internal/errors/: errors.go
internal/log/: logger.go
internal/query/: executor.go  executor_test.go  history.go  history_test.go  integration_test.go  pagination.go  pagination_test.go  resultset.go  resultset_test.go
internal/session/: health.go  health_test.go  pool.go  session.go  session_test.go  session_testonly.go
internal/ssh/: tunnel.go
plans/: README.md
plans/phases/: phase-01-setup.md  phase-02-backend.md  phase-03-connections.md  phase-04-drivers.md  phase-05-query.md  phase-06-sessions.md  phase-07-datagrid.md  phase-08-tabs.md  phase-09-export.md  phase-10-import.md  phase-11-history.md  phase-12-settings.md  phase-13-license.md  phase-14-ui.md  phase-15-state.md  phase-16-build.md  phase-17-testing.md  phase-18-release.md
plans/reference/: README.md  architecture.md  conventions.md  dependencies.md
plans/tasks/: backlog.md  sprint-template.md
specs/: architecture.md  connection_flow.md  core_services.md  data_grid_internals.md  data_models.md  data_mutation_rules.md  database_drivers.md  editor_internals.md  features.md  helpers_and_gotchas.md  implementation_plan.md.resolved  import_service.md  plugin_bridge_internals.md  plugins.md  query_pipeline.md  sidebar_schema.md  ssh_ssl_internals.md  state_management.md  tab_management.md  ui_components.md  ui_ux.md
src/: CMakeLists.txt  main.cpp
src/core/: CMakeLists.txt  change_tracker.cpp  connection_manager.cpp  core.cpp  database_driver.cpp  database_exceptions.cpp  query_executor.cpp  sql_generator.cpp
src/drivers/: CMakeLists.txt  drivers.cpp  postgres_driver.cpp
src/services/: CMakeLists.txt  services.cpp
src/ui/: CMakeLists.txt  connection_dialog.cpp  data_grid_widget.cpp  mainwindow.cpp  result_set_model.cpp  schema_tree_view.cpp  theme_manager.cpp  ui.cpp
tablefree/db/: __init__.py  config.py  driver.py  manager.py  mysql_driver.py  postgres_driver.py
tablepro/: index.html  package-lock.json  package.json  tailwind.config.js
tablepro/src/: App.tsx  index.css
tablepro/src-tauri/: Cargo.toml  tauri.conf.json
tablepro/src-tauri/src/: error.rs  lib.rs  main.rs
tablepro/src-tauri/src/commands/: connection.rs  mod.rs  query.rs  schema.rs
tablepro/src-tauri/src/db/: mod.rs  pool.rs  types.rs
tests/: CMakeLists.txt  README.md  conftest.py  test_drivers.py
tests/e2e/: query-execution.spec.ts
tests/integration/: CMakeLists.txt  test_postgres_driver_integration.cpp
tests/unit/: CMakeLists.txt  test_connection_manager.cpp  test_database_driver.cpp  test_postgres_driver.cpp
(+143 files in other folders)
